<resources>
    <string name="app_name" translatable="false">AVNC</string>
    <string name="title_add_server_profile">Add server</string>
    <string name="title_edit_server_profile">Edit server</string>
    <string name="title_export_profiles">Include server profiles</string>
    <string name="title_duplicate">Duplicate</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <string name="title_clear">Clear</string>
    <string name="title_copy_host">Copy host</string>
    <string name="title_copy_name">Copy name</string>
    <string name="title_advanced">Advanced</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_save">Save</string>
    <string name="title_try">Try</string>
    <string name="title_undo">Undo</string>
    <string name="title_settings">Settings</string>
    <string name="title_vnc_login">VNC login</string>
    <string name="title_ssh_login">SSH login</string>
    <string name="title_unlock_private_key">Unlock private key</string>
    <string name="title_forget">Forget</string>
    <string name="title_remember">Remember</string>
    <string name="title_export">Export</string>
    <string name="title_import">Import</string>
    <string name="title_view_only_mode">View-only</string>
    <string name="title_connect_on_app_start">Auto-connect when app starts</string>
    <string name="title_enable_wol">Wake-on-LAN</string>
    <string name="title_hide_remote_cursor">Hide remote pointer</string>
    <string name="title_button_up_delay">Send delayed click events</string>
    <string name="title_resize_remote_desktop">Resize remote session to local window</string>
    <string name="title_image_quality">Image quality</string>
    <string name="title_orientation">Orientation</string>
    <string name="title_image_quality_raw">Raw</string>
    <string name="title_vnc_security">Security</string>
    <string name="title_use_ssh_tunnel">Use SSH tunnel</string>
    <string name="title_always_show_advanced_editor">Always show advanced options</string>
    <string name="title_unknown_ssh_host">Unknown SSH host</string>
    <string name="title_ssh_host_key_changed">SSH host key changed</string>
    <string name="title_continue">Continue</string>
    <string name="title_export_passwords_and_keys">Export passwords and keys</string>
    <string name="title_delete_servers_before_import">Delete current servers before import</string>
    <string name="title_password">Password</string>
    <string name="title_use_repeater">Use repeater</string>
    <string name="title_private_key">Private key</string>
    <string name="title_change">Change</string>
    <string name="title_about">About</string>
    <string name="title_license">Licence</string>
    <string name="title_open_source_libraries">Open source libraries</string>
    <string name="title_report_bug">Report an issue</string>
    <string name="title_source_code">Source code</string>
    <string name="title_unlock_dialog">Unlock to continue</string>
    <string name="title_automatic">Automatic</string>
    <string name="title_none">None</string>
    <string name="title_next">Next</string>
    <string name="title_got_it">Got it</string>
    <string name="title_load_defaults">Load defaults</string>
    <string name="hint_urlbar">Connect to a Server</string>
    <string name="hint_server_name">Name (e.g. Work PC)</string>
    <string name="hint_host">Host</string>
    <string name="hint_repeater_host">Repeater host</string>
    <string name="hint_port">Port</string>
    <string name="hint_server_id">Server ID</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_wol_mac">MAC address</string>
    <string name="hint_wol_address">Broadcast address (optional)</string>
    <string name="hint_ssh_host">SSH host</string>
    <string name="hint_ssh_port">SSH port</string>
    <string name="hint_key_password">Key password</string>
    <string name="hint_send_text_to_server">Send text to server</string>
    <string name="msg_about_app">A fast and secure VNC client. Remotely view and control any device running a VNC server.\n\n\nAVNC is an open source and copyleft software — made with help from many contributors.</string>
    <string name="msg_server_profile_added">Server added</string>
    <string name="msg_server_profile_deleted">Server deleted</string>
    <string name="msg_normal_view_mode">Normal mode enabled</string>
    <string name="msg_input_disabled">Input disabled</string>
    <string name="msg_video_disabled">Video disabled</string>
    <string name="msg_gesture_style_locked_to_touchpad">\'Touchpad\' gesture style is active</string>
    <string name="msg_zoom_locked">Zoom locked</string>
    <string name="msg_zoom_unlocked">Zoom unlocked</string>
    <string name="msg_zoom_reset">Zoom reset to 100%</string>
    <string name="msg_gesture_style_help"><b>Touchscreen</b>\nDo actions at touch-point \n\n<b>Touchpad</b>\nDo actions at pointer</string>
    <string name="msg_drag_gesture_help">Assigning an action to this gesture will change Long press detection:\n\n<b>Press-hold-release</b> → Long press\n<b>Press-hold-swipe</b> → Long press and swipe</string>
    <string name="pref_ui">Interface</string>
    <string name="pref_viewer">Viewer</string>
    <string name="pref_input">Input</string>
    <string name="pref_tools">Tools</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_prefer_advanced_editor">Directly open advanced server options</string>
    <string name="pref_sort_server_list">Sort saved servers by name</string>
    <string name="pref_gesture">Gestures</string>
    <string name="pref_gesture_style">Gesture style</string>
    <string name="pref_two_finger_tap">Two-finger tap</string>
    <string name="pref_three_finger_tap">Three-finger tap</string>
    <string name="pref_double_tap">Double tap</string>
    <string name="pref_long_press">Long press</string>
    <string name="pref_swipe1">One-finger swipe</string>
    <string name="pref_swipe2">Two-finger swipe</string>
    <string name="pref_swipe3">Three-finger swipe</string>
    <string name="pref_double_tap_swipe">Double tap and swipe</string>
    <string name="pref_long_press_swipe">Long press and swipe</string>
    <string name="pref_swipe_sensitivity">Swipe sensitivity</string>
    <string name="pref_invert_vertical_scrolling">Invert vertical scrolling</string>
    <string name="pref_mouse">Mouse</string>
    <string name="pref_mouse_passthrough">Mouse passthrough</string>
    <string name="pref_mouse_passthrough_summary_off">Use mouse events for local gestures</string>
    <string name="pref_mouse_passthrough_summary_on">Send mouse events directly to server</string>
    <string name="pref_hide_local_cursor">Hide local pointer</string>
    <string name="pref_mouse_back">Back button</string>
    <string name="pref_vk">Virtual keys</string>
    <string name="pref_customize_virtual_keys">Customize keys</string>
    <string name="pref_vk_open_with_keyboard">Open with keyboard</string>
    <string name="pref_vk_row_count">Rows</string>
    <string name="pref_km">Key mappings</string>
    <string name="pref_km_right_alt_to_super">Right Alt → Super</string>
    <string name="pref_km_language_switch_to_super">Language Switch → Super</string>
    <string name="pref_km_back_to_escape">Back → Escape</string>
    <string name="pref_km_back_to_escape_summary">Does not affect the navigation bar</string>
    <string name="pref_orientation">Screen orientation</string>
    <string name="pref_fullscreen">Fullscreen</string>
    <string name="pref_display_cutout">Extend into cutout area</string>
    <string name="pref_enable_pip">Picture-in-picture</string>
    <string name="pref_toolbar">Toolbar</string>
    <string name="pref_toolbar_alignment">Alignment</string>
    <string name="pref_zoom">Zoom</string>
    <string name="pref_zoom_min">Minimum</string>
    <string name="pref_zoom_max">Maximum</string>
    <string name="pref_per_orientation_zoom">Separate zoom for each orientation</string>
    <string name="pref_import_export">Import/Export servers</string>
    <string name="pref_debugging">Debugging</string>
    <string name="pref_logs">Logs</string>
    <string name="pref_keycode_map">Keycode map</string>
    <string name="emm_theme_title">Theme</string>
    <string name="emm_bell_title">Bell</string>
    <string name="emm_sort_server_list_title">Sort saved servers by name</string>
    <string name="emm_prefer_advanced_editor_title">Directly open advanced server options</string>
    <string name="emm_screen_orientation_title">Screen orientation</string>
    <string name="emm_keep_screen_on_title">Keep screen ON</string>
    <string name="emm_fullscreen_title">Fullscreen</string>
    <string name="emm_draw_behind_cutout_title">Extend into cutout area</string>
    <string name="emm_pip_title">Picture-in-picture</string>
    <string name="emm_pause_fb_background_title">Pause updates when in background</string>
    <string name="emm_zoom_min_title">Minimum zoom</string>
    <string name="emm_zoom_min_desc">Allowed range: 10 to 100</string>
    <string name="emm_zoom_max_title">Maximum zoom</string>
    <string name="emm_zoom_max_desc">Allowed range: 100 to 1000</string>
    <string name="emm_per_orientation_zoom_title">Per-orientation zoom</string>
    <string name="emm_toolbar_alignment_title">Toolbar alignment</string>
    <string name="emm_toolbar_open_swipe_title">Swipe-in from edge to open toolbar</string>
    <string name="emm_toolbar_open_button_title">Show toolbar button</string>
    <string name="emm_toolbar_show_gesture_toggle_title">Show gesture style toggle</string>
    <string name="emm_gesture_style_title">Gesture style</string>
    <string name="emm_gesture_double_tap_title">Double tap</string>
    <string name="emm_gesture_long_press_title">Long press</string>
    <string name="emm_gesture_tap2_title">Two-finger tap</string>
    <string name="emm_gesture_tap3_title">Three-finger tap</string>
    <string name="emm_gesture_swipe1_title">One-finger swipe</string>
    <string name="emm_gesture_swipe2_title">Two-finger swipe</string>
    <string name="emm_gesture_swipe3_title">Three-finger swipe</string>
    <string name="emm_gesture_double_tap_swipe_title">Double tap and swipe</string>
    <string name="emm_gesture_long_press_swipe_title">Long press and swipe</string>
    <string name="emm_gesture_swipe_sensitivity_title">Swipe sensitivity</string>
    <string name="emm_gesture_swipe_sensitivity_desc">Allowed range: 5 to 15</string>
    <string name="emm_invert_scrolling_title">Invert vertical scrolling</string>
    <string name="emm_mouse_passthrough_title">Mouse passthrough</string>
    <string name="emm_capture_pointer_title">Capture pointer</string>
    <string name="emm_hide_local_cursor_title">Hide local pointer</string>
    <string name="emm_hide_remote_cursor_title">Hide remote pointer</string>
    <string name="emm_mouse_back_title">Back button</string>
    <string name="emm_vk_open_with_keyboard_title">Open virtual keys with keyboard</string>
    <string name="emm_vk_use_super_single_tap_title">Use Super key with single tap</string>
    <string name="emm_vk_row_count_title">Virtual keys rows</string>
    <string name="emm_km_right_alt_super_title">Right Alt → Super</string>
    <string name="emm_km_language_switch_super_title">Language Switch → Super</string>
    <string name="emm_km_back_escape_title">Back → Escape</string>
    <string name="emm_clipboard_sync_title">Clipboard sync</string>
    <string name="emm_lock_saved_server_title">Lock saved servers</string>
    <string name="emm_auto_reconnect_title">Reconnect automatically</string>
    <string name="emm_discovery_autorun_title">Discovery autorun</string>
    <string name="emm_rediscovery_indicator_title">Highlight rediscovered servers</string>
</resources>